Fixed appearance of illness checkboxes and aligned them correctly. Removed obsolete illness-related code.

--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -21,9 +21,15 @@
 }
 
 .illness-row {
-	grid-gap: 10px;
+	grid-gap: 5px;
 }
 
 .illness-checkbox {
-	padding: 10px 0px;
+	padding: 5px 0px;
+}
+
+.illness-name {
+	width: 200px;
+	max-width: 200px;
+	display: inline-block;
 }
